<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.saajuu.kurier_1.MainActivity">


    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:text="@string/witaj_mariusz" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="34dp"/>

            <Button android:id="@+id/button_synchronizuj" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/button_synchronizuj"
                android:textStyle="bold"
                android:padding="20dp"/>

            <Button android:id="@+id/button_zapakuj_paczki" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/button_zapakuj_paczki"
                android:textStyle="bold"
                android:padding="20dp"/>

            <Button android:id="@+id/button_podglad_trasy" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/button_podglad_trasy"
                android:textStyle="bold"
                android:padding="20dp"/>

            <Button android:id="@+id/button_rozpocznij_prace" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/button_rozpocznij_prace"
                android:textStyle="bold"
                android:padding="20dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
