<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.saajuu.kurier_1.MainActivity">

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView android:text="@string/data" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="16dp"/>

            <TextView android:text="@string/zaznacz_paczki" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="Nr 20829374687628376" />


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <Button android:id="@+id/button_zapisz" style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginTop="0dp" android:text="@string/button_zapisz"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="26dp"/>

                <Button android:id="@+id/button_anuluj" style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginTop="0dp" android:text="@string/button_anuluj"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:padding="26dp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</RelativeLayout>
